[package]
name = "hexbuffer-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-rustls = "0.26"
rustls-pki-types = "1.0"
rcgen = { version = "0.14", features = ["pem"] }
anyhow = "1.0"
base64 = "0.22"
webpki-roots = "1.0"

# HTTP stack
hyper = { version = "1", features = ["http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
http = "1"
bytes = "1"

# Error handling
thiserror = "2"

# Async traits
async-trait = "0.1"