[package]
name = "hexbuffer-proxy"
version = "0.0.1"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-rustls = "0.26"
rustls-pki-types = "1.0"
rcgen = { version = "0.14", features = ["pem"] }
anyhow = "1.0"
base64 = "0.22"
webpki-roots = "1.0"

# HTTP stack
hyper = { version = "1", features = ["http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
http-body-util = "0.1"
http = "1"
bytes = "1"

# Error handling
thiserror = "2"

# Async traits
async-trait = "0.1"

# WebSocket
tokio-tungstenite = { version = "0.30", features = ["rustls-tls-webpki-roots"] }
hyper-tungstenite = "0.30"
futures-util = "0.3"

# Upstream Hyper client (connection pooling, HTTP/2, ALPN)
hyper-rustls = { version = "0.27", features = ["http2", "webpki-roots", "native-tokio"] }

# Tower middleware stack (decompression, future: retry, timeout, rate-limit)
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["decompression-gzip", "decompression-deflate", "decompression-br", "decompression-zstd"] }

# Application-level body decoder plugin (opt-in)
flate2 = { version = "1", optional = true }
brotli = { version = "7", optional = true }
zstd = { version = "0.13", optional = true, default-features = false }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[features]
decoder = ["dep:flate2", "dep:brotli", "dep:zstd"]
default = ["decoder"]